# freecad-render-production

./: .gitignore  README.md  freecad-to-png.py  justfile  main.py  pyproject.toml
assembly_1.FCStd/: DiffuseColor  DiffuseColor1  DiffuseColor6  Document.xml  GuiDocument.xml  PartShape.brp  PartShape1.brp  PartShape10.brp  PartShape11.brp  PartShape12.brp  PartShape13.brp  PartShape14.brp  PartShape15.brp  PartShape16.brp  PartShape2.brp  PartShape3.brp  PartShape4.brp  PartShape5.brp  PartShape6.brp  PartShape7.brp  PartShape8.brp  PartShape9.brp  ProjectStd.pov  RadiosityNormal.pov  RadiosityOutdoorHQ.pov
